# casdoor-rust-sdk

./: .gitignore  .releaserc.json  .releaserc.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: auth.rs  lib.rs  networkconfig.rs  user.rs
src/entity/: config.rs  mod.rs  user.rs
src/errors/: mod.rs
src/service/: auth.rs  mod.rs  user.rs
tests/: auth_test.rs  user_test.rs
