[package]
name = "casdoor-rust-sdk"
version ="1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust client SDK for Casdoor"
repository = "https://github.com/casdoor/casdoor-rust-sdk"
readme = "README.md"
homepage = "https://casdoor.org"
keywords = ["iam", "auth", "sso", "oidc", "casdoor"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.82"
jsonwebtoken = "8.1.1"
http = "0.2.8"
urlencoding = "2.1.0"
oauth2 = "4.2.2"
toml = "0.5.9"
serde_derive = "1.0.138"


[dev-dependencies]
iron = "0.6.1"
router = "0.6.0"
urlencoding = "2.1.0"
url = "2.2.2"
hyper = {version = "0.14.19", features = ["server"]}
