[package]
name = "casdoor-rust-sdk"
version ="1.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust client SDK for Casdoor"
repository = "https://github.com/casdoor/casdoor-rust-sdk"
readme = "README.md"
homepage = "https://casdoor.org"
keywords = ["iam", "auth", "sso", "oidc", "casdoor"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
jsonwebtoken = "8"
http = "0.2"
urlencoding = "2.1.0"
oauth2 = "4.1"
toml = "0.7.4"
serde_derive = "1.0"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]


[dev-dependencies]
iron = "0.6.1"
router = "0.6.0"
urlencoding = "2.1.0"
url = "2.2.2"
hyper = {version = "0.14.26", features = ["server"]}
